--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -1,12 +1,13 @@
 \subsection{Product perspective}
+	The system will be developed from scratch and it will use a lot of external services including Google services and the services provided by the \defined{affiliated companies}. This is because the services provided by Google are of high quality and there is no point in trying to redevelop them. The services of affiliated companies are needed to interface with them and have information on tickets and vehicles \textit{(for Sharing Transportation Companies)}.
 \subsection{Product functions}
 Here we provide several scenarios to better delineate the purposes for which the app should be designed, the situations the S2B will deal with and more generally to have a better comprehension of the associated environment.
 
 	\subsubsection{Scenario 1}
-	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. We work from Monday to Friday, from 8 am to 16 pm.\newline
+	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. He works from Monday to Friday, from 8 am to 16 pm.\newline
 	There is an actual meeting coming up on Friday at 8 pm, so he creates a new	meeting in the app. After setting the time and the day, he invites his employees to join the meeting. He will remain in his office, so he will not need to use	any travel means.\newline
 	Giovanni is one of Mario's employee and he is registered to Travlendar+. He receives a notification and accepts the invitation to the meeting. He chooses to reach the location by walk because he will already be nearby.\newline
-	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the café near the metro at 6:40 pm, so it suggests Alex to take the metro instead of the car. He accepts the suggestion.
+	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the cafe near the metro at 6:40 pm, so it suggests Alex to take the metro instead of the car. He accepts the suggestion.
 	\subsubsection{Scenario 2}
 	Paolo, a resident of Bergamo, has recently registered to Travlendar+ and during	the initial setup has specified a flexible launch break from 11:00 am to 13:00 am, with at least 40 minutes of break.\newline
 	Tomorrow he is going to have an audition at 12:30 pm, in Monza. He inserts the event in the app and after having specified that the audition will end at about 13:30pm, he looks at the suggestions of the app on the travel means to take: the app suggests him some travel solutions, but he does not specify which he's going to take because he wants to think about it overnight.\newline
@@ -41,13 +42,13 @@ Here we provide several scenarios to better delineate the purposes for which the
 	\subsubsection{Actors}
 			\begin{itemize}
 			\item Person: a person that doesn't have a registered account. The only thing that he/she can do is to proceed with the Sign Up process;
-			\item User:a person passed through a successful registration process and now
-			able to use all the TravLendar+ services. He/she can login to the system and, after that, use all
+			\item User: a person passed through a successful registration process and now
+			able to use all the Travlendar+ services. He/she can login to the system and, after that, use all
 			the platform's functionalities.
 			\item Credit Institution: the institution that checks the credit-card validity and reports it to the S2B;
 			\item Google: the system with whom the S2B retrieves the maps and related information about routes, real-time traffic situations, estimated travel time and weather conditions;
 			\item Transport Company System: the system of the affiliated companies with whom the S2B interacts to allow the user to buy the tickets for the associated travel mean;
-			\item Shared vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App.
+			\item Shared Vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App.
 			\item Manager: the person able to manage the system. His activities consists in adding or deleting affiliated companies (both  transport companies or shared vehicle companies) and adding new type of tickets according to the services provided by affiliated transport companies.
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
