--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -22,7 +22,7 @@
 }
 
 % used to identify words defined in definitions section
-\newcommand{\defined}[1]{{#1}}
+\newcommand{\defined}[1]{{\hyperref[definitions]{($\uparrow$)}\textit{#1}}}
 
 % this is to create labels like \mylabel{arg1}{arg2}. The first one is the part that you call with \ref{arg1} (or with \myref), the second part will be just copy-pasted after the ref link
 \makeatletter
@@ -36,8 +36,8 @@
 \newcommand{\goal}[1]{\bigskip
 	\noindent\textbf{\myref{#1}}}
 
+% set margin of enumerate sections
 \setlist[enumerate,1]{leftmargin=1.2cm}
-
 
 %----- Define page layout -----
  \geometry{
