improve References, fill Effor&Team section

--- a/RASD/latex/main.tex
+++ b/RASD/latex/main.tex
@@ -30,9 +30,7 @@
 % avoid coloring references in table of content, list of figures and tables
 {\hypersetup{hidelinks}
 \tableofcontents
-\newpage
 \listoffigures
-\listoftables
 }
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
@@ -61,9 +59,9 @@
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
-\section{Effort Spent}
-\label{sect:effort}
-\input{sections/effort}
+\section{Effort Spent and Team Work}
+\label{sect:effort&team}
+\input{sections/effort&team}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
