--- a/RASD/latex/sections/references.tex
+++ b/RASD/latex/sections/references.tex
@@ -1,11 +1,18 @@
 \subsection{Software and Tools}
-\begin{itemize}
-\item
-	\LaTeX\ for typesetting document
-\item
-	GitHub for version control and team work
-\item
-	Alloy latex highlighting package: \href{https://github.com/Angtrim/alloy-latex-highlighting}{https://github.com/Angtrim/alloy-latex-highlighting}
-\item
-	StarUML for uml models
-\end{itemize}
+	\begin{itemize}
+	\item
+		\LaTeX\ for typesetting document
+	\item
+		TeXstudio as \LaTeX\ IDE
+	\item
+		GitHub for version control and team work
+	\item
+		Alloy latex highlighting package: \href{https://github.com/Angtrim/alloy-latex-highlighting}{https://github.com/Angtrim/alloy-latex-highlighting}
+	\item
+		StarUML for uml models
+	\end{itemize}
+\subsection{Reference Documents}
+	\begin{itemize}
+		\item Alloy reference:  \href{http://alloy.mit.edu/alloy/documentation/book-chapters/alloy-language-reference.pdf}{http://alloy.mit.edu/alloy/documentation/book-chapters/alloy-language-reference.pdf}
+		\item 29148-2011 - ISO/IEC/IEEE International Standard - Systems and software engineering -- Life cycle processes --Requirements engineering: \href{http://ieeexplore.ieee.org/document/6146379/}{http://ieeexplore.ieee.org/document/6146379/}
+	\end{itemize}
