fix some facts and improve alloy formatting

--- a/RASD/latex/alloy-style.sty
+++ b/RASD/latex/alloy-style.sty
@@ -13,7 +13,7 @@
     *{:}{{{\color[HTML]{2835C0}{$\colon$}}}}1
     {>}{{{\color[HTML]{2835C0}{>}}}}1
     {<}{{{\color[HTML]{2835C0}{<}}}}1
-    {|}{{{\color[HTML]{2835C0}{|}}}}1
+    {|}{{{\color[HTML]{2835C0}{\textbar}}}}1
     {==}{{{\color[HTML]{2835C0}{$=$}}}}1
     {=}{{{\color[HTML]{2835C0}{$=$}}}}1
     {!=}{{{\color[HTML]{2835C0}{$\neq$}}}}1
